--- a/public/forklift.html
+++ b/public/forklift.html
@@ -17,7 +17,7 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="">
     <meta property="og:article:author" content="The Avital's GH actions test repo website team" >
-    <meta property="og:article:published_time" content="2020-12-31 14:49:52 +0200" >
+    <meta property="og:article:published_time" content="2020-12-31 15:04:43 +0200" >
     <meta name="twitter:title" content="Forklift (upstream) | Avital's GH actions test repo">
     <meta name="twitter:description" content="Site to test setting up GH actions and Jekyll from scratch">
 
@@ -96,6 +96,9 @@
 </div>
 <div id="preamble">
 <div class="sectionbody">
+<div class="paragraph">
+<p>Doc attributes must be in header of this file. GitHub does not support including attributes file.</p>
+</div>
 <div class="admonitionblock important">
 <table>
 <tr>
